fixed search component button and spacing

--- a/src/app/blogpost-fullview/blogpost-fullview.component.css
+++ b/src/app/blogpost-fullview/blogpost-fullview.component.css
@@ -3,6 +3,6 @@
 }
 
 h1{
-    margin-top: 2rem;
+    margin-top: 6rem;
     font-family: poppins;
 }
